--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       context: ./
       dockerfile: Dockerfile
       target: local
+    volumes:
+        - "./module:/app/module"
+        - "./tests:/app/tests"
+
     ports:
       - "7777:80"
 
